[gd_scene load_steps=11 format=3 uid="uid://b575fi0e44gkg"]

[ext_resource type="Script" uid="uid://bybwi8eqnkihq" path="res://Scripts/CageFightWorld.gd" id="1_ruv4p"]
[ext_resource type="PackedScene" uid="uid://bg4oh7r4qnxy8" path="res://Scenes/Cards/Card_Fight.tscn" id="2_hv6vs"]
[ext_resource type="PackedScene" uid="uid://biel8sjt8vy5t" path="res://Scenes/ScreenUI/screen_ui.tscn" id="8_6fcln"]
[ext_resource type="PackedScene" uid="uid://buj48d65j7y07" path="res://Scenes/InScreenUI/in_screen_ui.tscn" id="8_77y8q"]
[ext_resource type="AudioStream" uid="uid://bvscl85iho5qp" path="res://Assets/Sounds/Static.wav" id="9_77y8q"]
[ext_resource type="Material" uid="uid://dxt6oe4rhk3du" path="res://Shaders/ColorIndex.tres" id="10_7mma4"]

[sub_resource type="Gradient" id="Gradient_a2ujk"]
offsets = PackedFloat32Array(0, 0.791667, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.559888, 0.559888, 0.559887, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7mma4"]
gradient = SubResource("Gradient_a2ujk")

[sub_resource type="Environment" id="Environment_h7q0i"]
background_mode = 3
background_canvas_max_layer = 2
ambient_light_source = 1
reflected_light_source = 1
tonemap_mode = 3
tonemap_exposure = 1.2
tonemap_white = 16.0
glow_levels/1 = 16.0
glow_levels/2 = 16.0
glow_levels/3 = 16.0
glow_levels/5 = 0.0
glow_normalized = true
glow_intensity = 1.0
glow_strength = 0.5
glow_mix = 0.825
glow_bloom = 1.0
glow_map_strength = 1.0
adjustment_enabled = true
adjustment_brightness = 1.3
adjustment_contrast = 0.8
adjustment_color_correction = SubResource("GradientTexture1D_7mma4")

[sub_resource type="World3D" id="World3D_dgxs4"]
environment = SubResource("Environment_h7q0i")

[node name="CageFight" type="Control" node_paths=PackedStringArray("ScrUI")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ruv4p")
CardFightScene = ExtResource("2_hv6vs")
ScrUI = NodePath("ScreenUI")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 76.0
offset_right = -355.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="ViewPort" type="SubViewport" parent="SubViewportContainer"]
process_mode = 1
disable_3d = true
own_world_3d = true
world_3d = SubResource("World3D_dgxs4")
handle_input_locally = false
snap_2d_vertices_to_pixel = true
audio_listener_enable_2d = true
positional_shadow_atlas_size = 512
size = Vector2i(845, 565)
render_target_update_mode = 4

[node name="InScreenUI" parent="SubViewportContainer/ViewPort" instance=ExtResource("8_77y8q")]
layer = 3

[node name="ScreenUI" parent="." instance=ExtResource("8_6fcln")]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_77y8q")
autoplay = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enabled = true

[node name="Screen" type="ColorRect" parent="CanvasLayer2"]
process_mode = 3
z_index = 1
material = ExtResource("10_7mma4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
